--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App {
-  text-align: center;
+  padding: 60px;
 }
 
 input {
-  width: 70%;
+  width: 100%;
   font-size: 1.2rem;
   padding: 10px;
   border-radius: 35px;
